Documentation of Tuesday's progress in the persistent variable group

--- a/notebooks/PersistentVariabilityMetrics.v3.ipynb
+++ b/notebooks/PersistentVariabilityMetrics.v3.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.9"
   },
   "name": "",
-  "signature": "sha256:2fff722479df4bb2b44ba3937c05108b2c7bf983f6eb51cb65d7f4c1d9c9345d"
+  "signature": "sha256:d48e1e247cb8a5b86962e6f0b42b754ed627f80a4d5331b031f972acd82f70ab"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -26,40 +26,110 @@
   {
    "cells": [
     {
-     "cell_type": "heading",
-     "level": 2,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Persistent Variabiliy Metrics"
+      "# Persistent Variability Metrics"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "These variabilty metrics were developed as a first attempt to understand LSST performance for discovering and characterising periodic variables. They are available in the [sims_maf_contrib](https://github.com/LSST-nonproject/sims_maf_contrib) github repo, in [varMetrics.py](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/mafContrib/varMetrics.py). \n",
+      "Daniel Mortlock, Vasiliy Belokurov, Simon Hodgkin, Steven Feeney, Chris Lintott, Phil Marshall\n",
       "\n",
-      "One metric (PhaseGaps) looks at the gaps in phase coverage for a set of observations. At each point in the sky (if we use a healpix slicer), a range of periods and the times of the visits are converted to phase values: then the largest gap in these phases is calculated. The metric calculates the max gap for a range of periods at each point; thus it also provides a few reduce functions to convert this to the period with the largest gap (at each point in the sky) and the value of the largest gap in phase coverage (at each point in the sky). We can also read the metric values back into python and generate plots of phase gaps vs. period, including the data for all points.\n",
-      "\n",
-      "The second metric (PeriodDeviation) generates a light curve (representing the variability of the source as a simple sine curve but neglecting photometric errors) with user-settable range of periods, then attempts to recover the period using a simple lomb-scargle calculation. Changing the period fitting routine would doubtless improve the period recovery.  Again, this should be paired with a healpix slicer to evaluate sets of visits which correspond to the same spot on the sky, and again each point is sampled at a range of different periods so the metric provides reduce methods and we can also read back in the results to evaluate true period vs. fit period across the entire sky. \n",
-      "\n",
-      "(this notebook requires sims_maf version >= 1.0)"
+      "_LSST:UK Cadenece Workshop, Cambridge, May 18-20, 2015_"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Important URLs\n",
-      "[Lynne Jones's rapid revisit simulations](http://tusken.astro.washington.edu:8080/allMetricResults?runId=1#A:%20Required%20SRD%20metrics_Rapid%20Revisit)\n",
+      "## Example Science Cases\n",
       "\n",
-      "[tGaps metric code](https://github.com/lsst/sims_maf/blob/master/python/lsst/sims/maf/metrics/tgaps.py)\n",
+      "* **Finding z=7 Quasars**: How many z=7 quasars will we find after 1 year of surveying? How well can these objects be characterised? i.e. How pure a sample can we make? z=7 quasars are recognisable by 1) their z-dropout nature (ie zero flux in _ugriz_ and some detection in _y_), 2) their quasar-like variability (ie lightcurves with variability on all scales, and a increasing structure function), and 3) their lack of proper motion.\n",
+      "* **Finding RR Lyrae**: Likewise, but for RR Lyrae stars, for mapping MW halo structure. RR Lyrae are recognisable by their less-than-one day, highly periodic and in some cases modulated variability, in all bands.\n",
+      "* **Finding Young Stellar Object (YSO) Bursts**: How well can we characterise the population of young stellar object bursts? Young stars undergo possibly episodic bursts, where their brightness increases rapidly by ~1 mag, before decaying over several weeks. _u_-band variability is particularly interesting. Distinguishing YSO bursts from other transients relies on the presence of a YSO pre-cursor. \n",
+      "* **Measuring Lensed Quasar Time Delays**: How many lensed quasars will have well-measured time delays? The requirements for accurate cosmology are extreme, but the TDC model allows us to relate the accuracy to three summaries of the observing pattern, night-to-night cadence, season length and campaign length."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Common Ground\n",
       "\n",
-      "[Mean night separation metric code](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/mafContrib/meanNightSeparationMetric.py)\n",
+      "Many science projects involve _using LSST as a finder_. In these cases, the main science comes from spectroscopic, multi-wavelength and/or high resolution imaging follow-up of an interesting sample of objects. In these projects, there will be keen interest in following up these new targets very soon after the first data release. Similarly, it is of interest to know how the sample is likely to evolve after 2, 3, years. _We would like to investigate metrics relating to these science cases over the course of the campaign._\n",
       "\n",
-      "[Database architecture](http://opsimcvs.tuc.noao.edu/docs/simulator/architecture.html)\n",
+      "The metrics of interest to each group relate to either the detectability or measurability of time-variable objects. As such they are likely to be functions of the `night` or `expMJD` database fields. In each case we expect to have a model of how the objects across the sky, and so knowing the detectability/measurability across the sky should be useful in science planning - so we expect the `healpixSlicer` (with `ditheredRA` and `ditheredDec`) as being most relevant."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Possible Tensions\n",
       "\n",
-      "[Summary table column descriptions](https://confluence.lsstcorp.org/display/SIM/Summary+Table+Column+Descriptions)"
+      "RR Lyrae potentially benefit from intra-night sampling (ie the solar system visit pairs), while longer timescale variable AGN might benefit from spreading out the visits more. \n",
+      "\n",
+      "YSOs and high extinction RR Lyrae need observations in the galactic plane, while quasar searching and measurement might be better focused on the extragalactic sky. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Goals\n",
+      "\n",
+      "We identified three goals for the group, with related activities:\n",
+      "\n",
+      "#### Get Started with MAF\n",
+      "\n",
+      "* Work through the existing variability metrics notebook.\n",
+      "* Think about how we might want to extend it, with some simple metrics related to the science cases above. \n",
+      "* Browse the existing metrics to see what we can build from. Of particular relevance is \n",
+      "[Lynne Jones's rapid revisit work](http://tusken.astro.washington.edu:8080/allMetricResults?runId=1#A:%20Required%20SRD%20metrics_Rapid%20Revisit), the\n",
+      "[tGaps metric code](https://github.com/lsst/sims_maf/blob/master/python/lsst/sims/maf/metrics/tgaps.py), and the\n",
+      "[mean night separation metric code](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/mafContrib/meanNightSeparationMetric.py). We'll also need to be familiar with the [summary table column descriptions](https://confluence.lsstcorp.org/display/SIM/Summary+Table+Column+Descriptions).\n",
+      "* Code up an interesting but very simple metric bundle.\n",
+      "\n",
+      "#### Investigate Survey Build-up\n",
+      "\n",
+      "* Produce metric reports for each annual data release, to help set the expectations of those planning \"finder\" projects\n",
+      "* (Some existing notebooks may already have examples of how to loop over SQL constraints and organize the outputs.)\n",
+      "\n",
+      "#### Compare Survey Strategies\n",
+      "\n",
+      "The available OpSim output databases are listed [here](https://confluence.lsstcorp.org/display/SIM/OpSim+Datasets+for+Cadence+Workshop+LSST2015). The baseline strategy is captured in **enigma_1189**. An interesting alternative for persistent variable object science is **opsim1_1160**, which is the same as enigma_1189 _except_ that the requirement of having transit time visit pairs for solar system (asteroid) science has been dropped. One effect should be to improve the sampling for long-timescale AGN at the expense of short-timescale RR Lyrae.\n",
+      "\n",
+      "* Compare our chosen metrics between these OpSim runs."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Periodic Variable Metric Analysis"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The Sims team has started developing some variability metrics to begin understanding LSST performance for discovering and characterising periodic variables. This notebook has been adapted from [Variability Metrics.ipynb](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/other/Variability%20Metrics.ipynb), and uses the metrics in [varMetrics.py](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/mafContrib/varMetrics.py), all in the [sims_maf_contrib](https://github.com/LSST-nonproject/sims_maf_contrib) github repo."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Periodic Variable Metrics \n",
+      "\n",
+      "One metric, `PhaseGaps`, looks at the gaps in phase coverage for a set of observations. At each point in the sky (if we use a healpix slicer), a range of periods and the times of the visits are converted to phase values: then the largest gap in these phases is calculated. The metric calculates the max gap for a range of periods at each point; thus it also provides a few reduce functions to convert this to the period with the largest gap (at each point in the sky) and the value of the largest gap in phase coverage (at each point in the sky). We can also read the metric values back into python and generate plots of phase gaps vs. period, including the data for all points.\n",
+      "\n",
+      "A second metric. `PeriodDeviation`, generates a light curve (representing the variability of the source as a simple sine curve but neglecting photometric errors) with user-settable range of periods, then attempts to recover the period using a simple lomb-scargle calculation. Changing the period fitting routine would doubtless improve the period recovery.  Again, this should be paired with a healpix slicer to evaluate sets of visits which correspond to the same spot on the sky, and again each point is sampled at a range of different periods so the metric provides reduce methods and we can also read back in the results to evaluate true period vs. fit period across the entire sky. \n",
+      "\n",
+      "(NB. This notebook requires sims_maf version >= 1.0)"
      ]
     },
     {
