Test commit / cheeky spelling change.

--- a/notebooks/PersistentVariabilityMetrics.v3.ipynb
+++ b/notebooks/PersistentVariabilityMetrics.v3.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.9"
   },
   "name": "",
-  "signature": "sha256:d48e1e247cb8a5b86962e6f0b42b754ed627f80a4d5331b031f972acd82f70ab"
+  "signature": "sha256:111a1eb3d4055bb0cbba3bc5ba5a97bf0d668382c8c9b0eb84acee08c8123edf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,9 +36,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Daniel Mortlock, Vasiliy Belokurov, Simon Hodgkin, Steven Feeney, Chris Lintott, Phil Marshall\n",
+      "Daniel Mortlock, Vasiliy Belokurov, Simon Hodgkin, Stephen Feeney, Chris Lintott, Phil Marshall\n",
       "\n",
-      "_LSST:UK Cadenece Workshop, Cambridge, May 18-20, 2015_"
+      "_LSST:UK Cadence Workshop, Cambridge, May 18-20, 2015_"
      ]
     },
     {
