Final tidy up at end of workshop

--- a/notebooks/PersistentVariabilityMetrics.v3.ipynb
+++ b/notebooks/PersistentVariabilityMetrics.v3.ipynb
@@ -132,7 +132,7 @@
       "\n",
       "#### Compare Survey Strategies\n",
       "\n",
-      "The available OpSim output databases are listed [here](https://confluence.lsstcorp.org/display/SIM/OpSim+Datasets+for+Cadence+Workshop+LSST2015). The baseline strategy is captured in **enigma_1189**. An interesting alternative for persistent variable object science is **opsim1_1160**, which is the same as enigma_1189 _except_ that the requirement of having transit time visit pairs for solar system (asteroid) science has been dropped. One effect should be to improve the sampling for long-timescale AGN at the expense of short-timescale RR Lyrae.\n",
+      "The available OpSim output databases are listed [here](https://confluence.lsstcorp.org/display/SIM/OpSim+Datasets+for+Cadence+Workshop+LSST2015). The baseline strategy is captured in **enigma\\_1189**. An interesting alternative for persistent variable object science is **opsim1\\_1160**, which is the same as enigma\\_1189 _except_ that the requirement of having transit time visit pairs for solar system (asteroid) science has been dropped. One effect should be to improve the sampling for long-timescale AGN at the expense of short-timescale RR Lyrae.\n",
       "\n",
       "* Compare our chosen metrics between these OpSim runs."
      ]
@@ -141,14 +141,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Periodic Variable Metric Analysis"
+      "## Persistent Variable Metric Analysis: LightCurveLength"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The Sims team has started developing some variability metrics to begin understanding LSST performance for discovering and characterising periodic variables. This notebook has been adapted from [Variability Metrics.ipynb](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/other/Variability%20Metrics.ipynb), and uses the metrics in [varMetrics.py](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/mafContrib/varMetrics.py), all in the [sims_maf_contrib](https://github.com/LSST-nonproject/sims_maf_contrib) github repo."
+      "The Sims team has started developing some variability metrics to begin understanding LSST performance for discovering and characterising periodic variables. The current notebook has been adapted from [Variability Metrics.ipynb](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/other/Variability%20Metrics.ipynb), and uses the metrics in [varMetrics.py](https://github.com/LSST-nonproject/sims_maf_contrib/blob/master/mafContrib/varMetrics.py), all in the [sims_maf_contrib](https://github.com/LSST-nonproject/sims_maf_contrib) github repo."
      ]
     },
     {
@@ -225,7 +225,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Set up the metrics and slicer. "
+      "### Persistent Variable Metrics\n",
+      "\n",
+      "To be written by us!\n",
+      "Let's first set up the metrics and slicer. "
      ]
     },
     {
@@ -288,6 +291,13 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now, lets package up our processing into a function so we can do experiments. "
+     ]
     },
     {
      "cell_type": "code",
